# ArchitecturePatternsWithPython

./: .gitignore  README.md  pyproject.toml
docs/: domain_driven_design.md  good_design.md
docs/good_design/: README.md
docs/good_design/domain_modeling/: README.md
docs/good_design/patterns/: README.md  repository.md  service_layer.md  unit_of_work.md
src/adapters/: __init__.py  abstract_repository.py  django_repository.py
src/domain/: __init__.py  batch.py  product.py
src/domain_modeling/: order_line.py  test_domain_models.py
src/ecommerce/adapters/: __init__.py  abstract_repository.py  abstract_unit_of_work.py  django_repository.py  django_unit_of_work.py  domain_model.py  fake_repository.py  fake_unit_of_work.py
src/ecommerce/batch_managing/: apps.py  models.py  repositories.py  services.py  tests.py
src/ecommerce/batch_managing/migrations/: 0001_initial.py  0002_orderline.py  0002_remove_batch_id_alter_batch_reference.py  0003_orderline_batch.py  0004_remove_orderline_batch_batch_line.py  0005_rename_line_batch_order_line.py
src/ecommerce/domain/: batch.py  exceptions.py  order_line.py  product.py  services.py  test_domain_models.py
src/ecommerce/ecommerce/: settings.py
