[tool.poetry]
name = "architecturepatternswithpython"
version = "0.1.0"
description = ""
authors = ["Lorenzo Bugli <bugli.lorenzo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"

[tool.poetry.dev-dependencies]
ruff = "^0.0.285"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
